[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "court"
version = "0.2.0"
description = "Fleet court — dispute resolution and arbitration for multi-agent coordination"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{name = "Cocapn"}]
keywords = ["cocapn", "fleet", "agent"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/SuperInstance/court"

[tool.setuptools.packages.find]
where = ["src"]
